--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -81,21 +81,14 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          ref: main
+          ref: feature/workflow/bump
           token: ${{ steps.github_app_token.outputs.token }}
-
-      - name: Add bwc version to main branch
-        run: |
-          echo Adding bwc version $NEXT_VERSION after $CURRENT_VERSION
-          sed -i "s/- \"$CURRENT_VERSION\"/\0\n  - \"$NEXT_VERSION\"/g" .ci/bwcVersions
-          echo Adding $NEXT_VERSION_UNDERSCORE after $CURRENT_VERSION_UNDERSCORE
-          sed -i "s/public static final Version $CURRENT_VERSION_UNDERSCORE = new Version(\([[:digit:]]\+\)\(.*\));/\0\n    public static final Version $NEXT_VERSION_UNDERSCORE = new Version($NEXT_VERSION_ID\2);/g" server/src/main/java/org/opensearch/Version.java
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ steps.github_app_token.outputs.token }}
-          base: main
+          base: feature/workflow/bump
           branch: 'create-pull-request/patch-main'
           commit-message: Add bwc version ${{ env.NEXT_VERSION }}
           signoff: true
