--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -1,6 +1,12 @@
 name: Codacy Analysis CLI
 
-on: ["push"]
+on:
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "*"
 
 jobs:
   codacy-analysis-cli:
@@ -8,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@main
+        uses: actions/checkout@v3
 
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@master
