--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -1,12 +1,6 @@
 name: Codacy Analysis CLI
 
-on:
-  push:
-    branches:
-      - "*"
-  pull_request:
-    branches:
-      - "*"
+on: ["push"]
 
 jobs:
   codacy-analysis-cli:
