--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -12,13 +12,13 @@ jobs:
 
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@master
-        with:
-          output: results.sarif
-          format: sarif
-          gh-code-scanning-compat: true
-          max-allowed-issues: 2147483647
+#        with:
+#          output: results.sarif
+#          format: sarif
+#          gh-code-scanning-compat: true
+#          max-allowed-issues: 2147483647
 
-      - name: Upload SARIF results file
-        uses: github/codeql-action/upload-sarif@main
-        with:
-          sarif_file: results.sarif
+#      - name: Upload SARIF results file
+#        uses: github/codeql-action/upload-sarif@main
+#        with:
+#          sarif_file: results.sarif
