--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - "*"
+permissions:
+  contents: read
 
 env:
   GITHUB_ACTIONS: true
@@ -18,15 +20,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with: { fetch-depth: 1 }
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v3
         with: { go-version: '1.x' }
-      - name: Install dependencies
-        run: go install golang.org/x/lint/golint@latest
-        env:
-          GOBIN: ${{ env.GOROOT }}/bin
-        shell: bash
-      - run: go version
-      - run: make lint
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v3.4.0
 
   prettify:
     name: Prettify
