--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,8 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.52.2
+          args: --issues-exit-code=0
+          only-new-issues: true
 
   prettify:
     name: Prettify
