checking conf file
Signed-off-by: Rakhat Zhuman <zhumanrakhat01@gmail.com>

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -5,5 +5,9 @@ engines:
     checks:
       MD002: # "First header should be a h1 header"
         enabled: false
+      MD013:
+        enabled: false
+      MD010:
+        enabled: false
 exclude_paths:
   - "*"
