checking conf file
Signed-off-by: Rakhat Zhuman <zhumanrakhat01@gmail.com>

--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -15,3 +15,13 @@ jobs:
         with:
           run-gosec: true
           run-staticcheck: true
+          tool:
+            markdownlint:
+              enabled: true
+              checks:
+                MD002: # "First header should be a h1 header"
+                  enabled: false
+                MD013:
+                  enabled: false
+                MD010:
+                  enabled: false
