--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -21,4 +21,6 @@ jobs:
         with:
           projectBaseDir: .
           args: >
+            -Dsonar.organization=opensearch-go
+            -Dsonar.projectKey=zethuman_opensearch-go
             -Dsonar.verbose=true
