--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,8 +21,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.52.2
-          args: --issues-exit-code=0
-          only-new-issues: true
+          args: -v -c .golangci.yml
 
   prettify:
     name: Prettify
